fixes horizontal scroll

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ h1 {
 	font-size: 1.1em;
 	line-height: 1.9em;
 	z-index: 1;
+	width: 4em;
 	letter-spacing: 10px;
 }
 
